# sentinel

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: index.html  live-demo.cast  record-demo.sh  record-simple.sh  run-attacks.sh  target.html  tweet-thread.md
src/: cli.rs  main.rs
src/audit/: mod.rs  report.rs  runner.rs  sandbox.rs
src/audit_trail/: mod.rs
src/classifier/: mod.rs
src/common/: types.rs
src/corpus/: mod.rs  parser.rs
src/evaluate/: hook_schema.rs  mod.rs
src/heuristic/: automata.rs  context.rs  mod.rs
src/install/: defaults.rs  hooks.rs  mod.rs
src/policy/: matcher.rs  mod.rs  schema.rs
src/wrap/: mod.rs
tests/fixtures/corpus/: direct-001.toml  drift-001.toml  exfil-001.toml
