[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"
description = "runtime defense for CLI AI agents"
license = "MIT OR Apache-2.0"
repository = "https://github.com/StressTestor/sentinel"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
bollard = "0.19"
tokio = { version = "1", features = ["full"] }
colored = "2"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aho-corasick = "1"
regex = "1"
bincode = "1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[features]
proptest = ["dep:proptest"]

[dependencies.proptest]
version = "1"
optional = true

[profile.release]
lto = true
strip = true
codegen-units = 1
